Fixing white bar on mobile

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -35,6 +35,9 @@ body {
     overflow-x: hidden;
     font-weight: 100;
     position: relative;
+    margin: none;
+    padding: none;
+    width: 100%;
 }
 
 html, body {
